--- a/index.htmlportfolio.html
+++ b/index.htmlportfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriela &amp; Justin &hearts; Duo Portfolio</title>
     <link rel="icon" href="favicon.ico.png">
-    <lin rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     </head>
     <style>
         /* ======= BASE STYLES ======= */
